# GraphicsFinalProject

./: CMakeLists.txt  README.md  submission.md
resources/shaders/: block.frag  block.vert  bloomcombine.frag  bloomextract.frag  blur.frag  blur.vert  debug.frag  debug.vert  default.frag  default.frag.autosave  default.vert  default.vert.autosave  depthviz.frag  gbuffer.frag  gbuffer.vert  gbufferviz.frag  gbufferviz.vert  motionblur.frag  motionblur.vert  particles.frag  particles.vert  phong.frag  phong.vert  post.frag  post.vert  postfilter.frag  postfilter.vert  ui.vert
scenefiles/maps/: beeg.json  bigger.json  kaiaaaa.json  kaialove.json  smol.json
src/: main.cpp  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  settings.h
src/blocks/: Block.cpp  Block.h  CompletionCubePiece.cpp  CompletionCubePiece.h  TreePiece.cpp  TreePiece.h
src/enemies/: enemy.cpp  enemy.h  enemymanager.cpp  enemymanager.h
src/lsystem/: axialtree.h  lsystemwidget.cpp  lsystemwidget.h  treegenerator.cpp  treegenerator.h
src/map/: Chunk.cpp  Chunk.h  CompletionCube.cpp  CompletionCube.h  Map.cpp  Map.h  Tree.h  mapbuilder.cpp  mapbuilder.h  mapbuilderwidget.cpp  mapbuilderwidget.h  mapproperties.cpp  mapproperties.h  terraintreegenerator.cpp  terraintreegenerator.h
src/particlesystem/: particlesystem.cpp  particlesystem.h
src/realtime/: fog.cpp  fog.h  gbuffer.cpp  gbuffer.h  input.cpp  input.h  physics.cpp  physics.h  rendering.cpp  rendering.h  textures.cpp  textures.h
src/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Shape.h  Sphere.cpp  Sphere.h  Tet.cpp  Triangle.cpp
src/tomerge/: blur.frag  default.frag  realtime.cpp  realtime.h  texture.frag
src/ui/: ui.cpp  ui.h
src/utils/: audiomanager.cpp  audiomanager.h  camera.cpp  camera.h  camerapath.cpp  camerapath.h  debug.h  sceneparser.cpp  sceneparser.h  shapefactory.cpp  shapefactory.h  transforms.h
